fix some issues

--- a/src/main/config/domain.properties
+++ b/src/main/config/domain.properties
@@ -1,8 +1,8 @@
-jboss.host=https://nokia-test.com
+base.url=https://www.google.lk
 #testng or junit
 test.framework=junit
 #local or remote
-driver.mode=local
-hub.url=http://127.0.0.1:4444/wd/hub
+driver.mode=remote
+hub.url=http://localhost:4444/wd/hub
 enable.native.events=true
 
