initial PO model changes

--- a/src/main/config/domain.properties
+++ b/src/main/config/domain.properties
@@ -1,8 +1,10 @@
-base.url=https://www.google.lk
+base.url=https://www.google.com/
 #testng or junit
 test.framework=junit
 #local or remote
 driver.mode=remote
 hub.url=http://localhost:4444/wd/hub
 enable.native.events=true
+page.object.class.annotation=pageobject
+page.object.function.annotation=function
 
